feat: update branding from AIOutlet to xshop.ai across all files and tests

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="xShop.ai Admin Dashboard" />
+    <meta name="description" content="xshop.ai Admin Dashboard" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>xShop.ai Admin</title>
+    <title>xshop.ai Admin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
